# SirPixAlotBevy

./: Cargo.toml  index.html
.cargo/: config.toml
.github/workflows/: trunk.yml
src/: components.rs  dtos.rs  http.rs  main.rs
