[package]
name = "sir-pix-alot-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
crossbeam-channel = "0.5.13"
ehttp = { version = "0.5.0", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
